# fpwap

./: .gitignore  README.md  ROADMAP.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
bench/results/: 70b_chunk_size_sweep_1k.csv  70b_streaming_mb_sweep.csv  70b_streaming_n_scaling.csv  70b_streaming_n_scaling_cold.csv  8b_chunk_size_sweep_1k.csv  8b_chunk_size_sweep_8k.csv  8b_preloaded_n_scaling.csv  8b_streaming_mb_sweep.csv
scripts/: bench_bucketed_padding.py  bench_n_scaling.py  bench_warm_start.py  benchmark.py  harness_adapter.py  study_chunk_size.py  study_microbatch.py
src/fpwap/: __init__.py  buffer.py  cost_model.py  engine.py  extractor.py  loader.py  preflight.py  types.py
src/fpwap/callbacks/: __init__.py  base.py  common.py
src/fpwap/models/: __init__.py  base.py  gpt2.py  llama.py
src/fpwap/storage/: __init__.py  memmap.py
tests/: conftest.py
tests/gpu/: test_buffer_on_cpu.py  test_disk_buffer_bit_exact.py  test_emit_staging_gpu.py  test_final_norm_bit_exact.py  test_forward_bit_perfect.py  test_real_llama_bit_exact.py  test_real_model_families_bit_exact.py  test_streaming_bit_exact.py  test_sweep_pack_llama_gpu.py
tests/integration/: test_activations_as_path.py  test_bucketed_padding.py  test_buffer_aliasing_safety.py  test_buffer_device.py  test_chunk_drain_progress.py  test_chunk_engine.py  test_early_exit.py  test_engine_forcing.py  test_engine_llama.py  test_engine_ragged_emit.py  test_engine_streaming_cpu.py  test_extra_hooks_gpt2.py  test_extra_hooks_llama.py  test_extractor.py  test_harness_adapter.py  test_incremental_pca.py  test_layer_artifacts.py  test_llama_packed_forward.py  test_memmap_backend.py  test_model_families.py  test_padded_batch.py  test_preflight_minimum.py  test_progress_reporter.py  test_raw_activations.py  test_readme_workflow.py  test_steer_and_diff.py  test_sublayer_writeback.py  test_sweep_pack_llama.py  test_teardown_progress.py  test_verify.py  test_warm_start.py  test_writeback_residual_pre.py
tests/unit/: test_auto_microbatch.py  test_bucketing.py  test_buffer_pinned.py  test_chunk_drain_timing.py  test_chunk_helpers.py  test_cost_model.py  test_dtype_table.py  test_emit_drain.py  test_emit_ragged.py  test_emit_staging.py  test_emit_timing.py  test_final_norm.py  test_harness_fingerprint.py  test_index_builder.py  test_load_from_cache.py  test_loader_layer.py  test_memmap_shard_fadvise.py  test_memmap_shard_zero_copy.py  test_packed_residual_buffer.py  test_packing_plumbing.py  test_preflight_math.py  test_preflight_report.py  test_preloop_timing.py  test_profile_metrics.py  test_result_artifact.py  test_setup_timing.py  test_shard_page_advisor.py  test_snapshot_resolution.py  test_sweep_pack_gates.py  test_teardown_timing.py  test_tied_weights.py  test_warm_start_stats.py
