[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fpwap"
version = "0.0.0"
description = "Forward Pass Weight Amortization Protocol — invert the inference loop for large transformer models."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michael Klear" }]
dependencies = [
    "accelerate>=1.0",
    "safetensors>=0.4",
    "torch>=2.1",
    "transformers>=4.40",
    "pyarrow>=15.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fpwap"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/fpwap"]

[[tool.mypy.overrides]]
module = ["accelerate.*", "safetensors.*", "transformers.*", "pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not gpu'"
markers = [
    "gpu: tests that require a local CUDA GPU (skipped in CI)",
]
